--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="assets/bootstrap-editable-v1.1.4/bootstrap-editable/css/bootstrap-editable.css">
     <!-- editor de textos -->
     <!--<link rel="stylesheet" type="text/css" href="assets/css/bootstrap-wysihtml5-0.0.2.css"></link>-->
-    <link rel="stylesheet" type="text/css" href="assets/wysihtml5-image-upload-master/js/bootstrap-wysihtml5-0.0.2.js"></link>
+    <link rel="stylesheet" type="text/css" href="assets/wysihtml5-image-upload-master/js/bootstrap-wysihtml5-0.0.2.js">
     <style type="text/css">
       body {
         padding-top: 70px;
